--- a/index.html
+++ b/index.html
@@ -3,162 +3,160 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Homework Sharing Portal</title>
+  <title>TheHomeworkGuy</title>
   <style>
     body {
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #f4f6f9;
+      margin: 0;
+      font-family: 'Segoe UI', Tahoma, sans-serif;
+      background: #f9fbfc;
       color: #333;
-      padding: 20px;
-      max-width: 1000px;
-      margin: auto;
     }
-
-    h2 {
+    header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 1rem 2rem;
+      background: rgba(255,255,255,0.9);
+      position: fixed;
+      width: 100%;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.05);
+      z-index: 10;
+    }
+    header .logo {
+      font-size: 1.5rem;
+      font-weight: bold;
+      color: #0077cc;
+    }
+    header nav a {
+      margin: 0 1rem;
+      text-decoration: none;
+      color: #555;
+      font-weight: 500;
+    }
+    header nav a:hover {
+      color: #0077cc;
+    }
+    .hero {
+      height: 100vh;
+      background: url('https://via.placeholder.com/1600x800') center/cover no-repeat;
+      display: flex;
+      align-items: center;
+      justify-content: center;
       text-align: center;
-      color: #2b6777;
+      padding: 0 1rem;
     }
-
-    form {
+    .hero h1 {
+      font-size: 3rem;
+      color: white;
+      margin-bottom: 1rem;
+      text-shadow: 0 2px 8px rgba(0,0,0,0.4);
+    }
+    .hero p {
+      font-size: 1.2rem;
+      color: white;
+      margin-bottom: 2rem;
+      max-width: 600px;
+      text-shadow: 0 2px 8px rgba(0,0,0,0.4);
+    }
+    .hero .btn {
+      padding: 0.8rem 2rem;
+      font-size: 1rem;
+      color: white;
+      background: #0077cc;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      text-decoration: none;
+    }
+    .hero .btn:hover {
+      background: #005fa3;
+    }
+    .features {
+      padding: 4rem 2rem;
+      text-align: center;
       background: #fff;
-      padding: 15px;
-      border-radius: 8px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+    }
+    .features h2 {
+      margin-bottom: 2rem;
+      font-size: 2rem;
+      color: #222;
+    }
+    .feature-list {
       display: flex;
       flex-wrap: wrap;
-      gap: 10px;
-      align-items: center;
+      justify-content: center;
+      max-width: 900px;
+      margin: auto;
     }
-
-    form > * {
-      flex: 1 1 auto;
-      min-width: 120px;
+    .feature-item {
+      flex: 1 1 250px;
+      margin: 1rem;
+      padding: 1.5rem;
+      border-radius: 8px;
+      background: #f5f7fa;
+      text-align: left;
     }
-
-    select, input, textarea, button {
-      padding: 8px;
-      font-size: 0.9em;
-      border-radius: 5px;
-      border: 1px solid #ccc;
-      width: 100%;
-      box-sizing: border-box;
+    .feature-item h3 {
+      margin-bottom: 0.5rem;
+      font-size: 1.2rem;
+      color: #0077cc;
     }
-
-    textarea {
-      resize: none;
+    .feature-item p {
+      font-size: 0.95rem;
+      color: #555;
     }
-
-    button {
-      background-color: #2b6777;
-      color: white;
-      border: none;
-      cursor: pointer;
-      min-width: 100px;
-    }
-
-    button:hover {
-      background-color: #1f4f5f;
-    }
-
-    #submittedList {
-      margin-top: 30px;
-    }
-
-    li {
-      background: #fff;
-      padding: 10px;
-      border-radius: 6px;
-      margin-bottom: 10px;
-      list-style: none;
-      box-shadow: 0 1px 3px rgba(0,0,0,0.05);
+    footer {
+      padding: 2rem;
+      text-align: center;
+      font-size: 0.9rem;
+      color: #777;
+      background: #f5f7fa;
     }
   </style>
 </head>
 <body>
 
-  <h2>Submit Homework</h2>
+  <header>
+    <div class="logo">TheHomeworkGuy</div>
+    <nav>
+      <a href="#features">Features</a>
+      <a href="login.html">Login</a>
+    </nav>
+  </header>
 
-  <form id="homeworkForm">
-    <input type="date" name="date" id="dateInput" required>
+  <section class="hero">
+    <div>
+      <h1>Your Homework, Anywhere 📚</h1>
+      <p>Upload, access, and share your class assignments online—fast, secure, and always available.</p>
+      <a href="login.html" class="btn">Get Started</a>
+    </div>
+  </section>
 
-    <select name="class" required>
-      <option value="" disabled selected>Class</option>
-      <option>1</option><option>2</option><option>3</option><option>4</option><option>5</option>
-      <option>6</option><option>7</option><option>8</option><option>9</option><option>10</option>
-    </select>
+  <section id="features" class="features">
+    <h2>Why TheHomeworkGuy?</h2>
+    <div class="feature-list">
+      <div class="feature-item">
+        <h3>📂 Upload & Download</h3>
+        <p>Easily upload classwork and download submissions anytime, anywhere.</p>
+      </div>
+      <div class="feature-item">
+        <h3>🔒 Secure Access</h3>
+        <p>Protected login ensures your homework is safe and private.</p>
+      </div>
+      <div class="feature-item">
+        <h3>💡 Minimalist Design</h3>
+        <p>A clean and modern interface that’s intuitive for everyone.</p>
+      </div>
+      <div class="feature-item">
+        <h3>🔗 Shareable Links</h3>
+        <p>Share assignments with classmates or teachers in just one click.</p>
+      </div>
+    </div>
+  </section>
 
-    <select name="section" required>
-      <option value="" disabled selected>Section</option>
-      <option>A</option><option>B</option><option>C</option><option>D</option>
-      <option>E</option><option>F</option><option>G</option>
-    </select>
-
-    <select name="subject" required>
-      <option value="" disabled selected>Subject</option>
-      <option>English</option>
-      <option>Maths</option>
-      <option>Science</option>
-      <option>Social</option>
-      <option>Hindi</option>
-      <option>Sanskrit</option>
-    </select>
-
-    <input type="text" name="description" placeholder="Brief Comment" required />
-
-    <button type="submit">Upload</button>
-  </form>
-
-  <div id="submittedList">
-    <h3>Submitted Homework</h3>
-    <ul id="homeworkList"></ul>
-  </div>
-
-  <script>
-    const form = document.getElementById("homeworkForm");
-    const homeworkList = document.getElementById("homeworkList");
-    const savedHomework = JSON.parse(localStorage.getItem("homeworks")) || [];
-
-    function displayHomework() {
-      homeworkList.innerHTML = '';
-      savedHomework.forEach(hw => {
-        const li = document.createElement("li");
-        li.innerHTML = `
-          <strong>${hw.subject}</strong> - Class ${hw.class}${hw.section} on ${hw.date}<br>
-          ${hw.description}
-        `;
-        homeworkList.appendChild(li);
-      });
-    }
-
-    form.addEventListener("submit", function (e) {
-      e.preventDefault();
-
-      const data = {
-        date: form.date.value,
-        class: form.class.value,
-        section: form.section.value,
-        subject: form.subject.value,
-        description: form.description.value
-      };
-
-      savedHomework.push(data);
-      localStorage.setItem("homeworks", JSON.stringify(savedHomework));
-
-      form.reset();
-      displayHomework();
-    });
-
-    // Disable Sundays
-    document.getElementById("dateInput").addEventListener("input", function () {
-      const date = new Date(this.value);
-      if (date.getDay() === 0) {
-        alert("Sundays are not allowed for homework entries.");
-        this.value = '';
-      }
-    });
-
-    displayHomework();
-  </script>
+  <footer>
+    &copy; 2025 TheHomeworkGuy — All rights reserved.
+  </footer>
 
 </body>
 </html>
