--- a/index.html
+++ b/index.html
@@ -4,158 +4,176 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>TheHomeworkGuy</title>
+  <link href="https://fonts.googleapis.com/css2?family=Baloo+2&family=Lexend:wght@400;600&display=swap" rel="stylesheet">
   <style>
-    body {
+    * {
       margin: 0;
-      font-family: 'Segoe UI', Tahoma, sans-serif;
-      background: #f9fbfc;
-      color: #333;
+      padding: 0;
+      box-sizing: border-box;
     }
+    body {
+      font-family: 'Lexend', sans-serif;
+      background: radial-gradient(circle at 30% 10%, #ffe53b, #fd3838);
+      overflow-x: hidden;
+      color: #1a1a1a;
+    }
+
     header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 1rem 2rem;
-      background: rgba(255,255,255,0.9);
-      position: fixed;
-      width: 100%;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.05);
-      z-index: 10;
-    }
-    header .logo {
-      font-size: 1.5rem;
-      font-weight: bold;
-      color: #0077cc;
-    }
-    header nav a {
-      margin: 0 1rem;
-      text-decoration: none;
-      color: #555;
-      font-weight: 500;
-    }
-    header nav a:hover {
-      color: #0077cc;
-    }
-    .hero {
-      height: 100vh;
-      background: url('https://via.placeholder.com/1600x800') center/cover no-repeat;
-      display: flex;
-      align-items: center;
-      justify-content: center;
+      background: linear-gradient(135deg, #ff0080, #7928ca);
+      padding: 1.5rem 2rem;
       text-align: center;
-      padding: 0 1rem;
+      color: white;
+      font-size: 2rem;
+      font-family: 'Baloo 2', cursive;
+      letter-spacing: 1px;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.2);
     }
+
+    .hero {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      padding: 4rem 2rem;
+      position: relative;
+    }
+
     .hero h1 {
       font-size: 3rem;
-      color: white;
+      color: #fff;
+      font-weight: 600;
       margin-bottom: 1rem;
-      text-shadow: 0 2px 8px rgba(0,0,0,0.4);
+      text-shadow: 1px 1px 4px rgba(0,0,0,0.2);
     }
+
     .hero p {
       font-size: 1.2rem;
-      color: white;
-      margin-bottom: 2rem;
+      color: #f0f0f0;
       max-width: 600px;
-      text-shadow: 0 2px 8px rgba(0,0,0,0.4);
-    }
-    .hero .btn {
-      padding: 0.8rem 2rem;
-      font-size: 1rem;
-      color: white;
-      background: #0077cc;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      text-decoration: none;
-    }
-    .hero .btn:hover {
-      background: #005fa3;
-    }
-    .features {
-      padding: 4rem 2rem;
-      text-align: center;
-      background: #fff;
-    }
-    .features h2 {
       margin-bottom: 2rem;
-      font-size: 2rem;
-      color: #222;
     }
-    .feature-list {
+
+    .cta-button {
+      background: linear-gradient(45deg, #00f2fe, #4facfe);
+      color: white;
+      padding: 1rem 2rem;
+      font-size: 1.1rem;
+      border-radius: 50px;
+      border: none;
+      cursor: pointer;
+      transition: all 0.3s ease;
+      box-shadow: 0 10px 25px rgba(79, 172, 254, 0.4);
+    }
+
+    .cta-button:hover {
+      background: linear-gradient(45deg, #4facfe, #00f2fe);
+      transform: scale(1.08);
+    }
+
+    .blob {
+      position: absolute;
+      z-index: -1;
+      opacity: 0.25;
+    }
+
+    .blob1 {
+      top: -100px;
+      left: -100px;
+      width: 300px;
+    }
+
+    .blob2 {
+      bottom: -100px;
+      right: -100px;
+      width: 300px;
+    }
+
+    .features {
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
-      max-width: 900px;
-      margin: auto;
+      padding: 4rem 2rem;
+      gap: 2rem;
+      background: linear-gradient(to bottom, #ffecd2, #fcb69f);
     }
-    .feature-item {
-      flex: 1 1 250px;
-      margin: 1rem;
-      padding: 1.5rem;
-      border-radius: 8px;
-      background: #f5f7fa;
-      text-align: left;
-    }
-    .feature-item h3 {
-      margin-bottom: 0.5rem;
-      font-size: 1.2rem;
-      color: #0077cc;
-    }
-    .feature-item p {
-      font-size: 0.95rem;
-      color: #555;
-    }
-    footer {
+
+    .card {
+      background: white;
+      border-radius: 20px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.1);
       padding: 2rem;
+      width: 280px;
+      transition: transform 0.3s;
+    }
+
+    .card:hover {
+      transform: translateY(-10px);
+    }
+
+    .card h3 {
+      font-size: 1.4rem;
+      margin-bottom: 0.5rem;
+      color: #ff0080;
+    }
+
+    .card p {
+      font-size: 1rem;
+      color: #444;
+    }
+
+    footer {
       text-align: center;
+      padding: 2rem;
       font-size: 0.9rem;
-      color: #777;
-      background: #f5f7fa;
+      background: linear-gradient(90deg, #ff9a9e, #fad0c4);
+      color: #333;
+    }
+
+    @media (max-width: 768px) {
+      .hero h1 {
+        font-size: 2.2rem;
+      }
+      .card {
+        width: 90%;
+      }
     }
   </style>
 </head>
 <body>
 
   <header>
-    <div class="logo">TheHomeworkGuy</div>
-    <nav>
-      <a href="#features">Features</a>
-      <a href="login.html">Login</a>
-    </nav>
+    🎒 TheHomeworkGuy
   </header>
 
   <section class="hero">
-    <div>
-      <h1>Your Homework, Anywhere 📚</h1>
-      <p>Upload, access, and share your class assignments online—fast, secure, and always available.</p>
-      <a href="login.html" class="btn">Get Started</a>
-    </div>
+    <img src="https://www.svgrepo.com/show/354202/blob-color.svg" class="blob blob1" />
+    <img src="https://www.svgrepo.com/show/354202/blob-color.svg" class="blob blob2" />
+    <h1>Bringing the Classroom to Your Screen. 💥</h1>
+    <p>Homework & Classwork — Right Where You Need It.</p>
+    <a href="login.html"><button class="cta-button">Let’s Go 🚀</button></a>
   </section>
 
-  <section id="features" class="features">
-    <h2>Why TheHomeworkGuy?</h2>
-    <div class="feature-list">
-      <div class="feature-item">
-        <h3>📂 Upload & Download</h3>
-        <p>Easily upload classwork and download submissions anytime, anywhere.</p>
-      </div>
-      <div class="feature-item">
-        <h3>🔒 Secure Access</h3>
-        <p>Protected login ensures your homework is safe and private.</p>
-      </div>
-      <div class="feature-item">
-        <h3>💡 Minimalist Design</h3>
-        <p>A clean and modern interface that’s intuitive for everyone.</p>
-      </div>
-      <div class="feature-item">
-        <h3>🔗 Shareable Links</h3>
-        <p>Share assignments with classmates or teachers in just one click.</p>
-      </div>
+  <section class="features">
+    <div class="card">
+      <h3>📚 Organized Homework</h3>
+      <p>All your classwork and assignments in one place. No mess, no stress.</p>
+    </div>
+    <div class="card">
+      <h3>⚡ Upload Fast</h3>
+      <p>Snap and upload homework in seconds. Done and dusted.</p>
+    </div>
+    <div class="card">
+      <h3>🎨 Funky UI</h3>
+      <p>Bright colors, playful shapes, and a Gen-Z-friendly vibe make learning fun again.</p>
+    </div>
+    <div class="card">
+      <h3>☁️ Access Anywhere</h3>
+      <p>Homework on your phone, tablet, or laptop — anytime, anywhere.</p>
     </div>
   </section>
 
   <footer>
-    &copy; 2025 TheHomeworkGuy — All rights reserved.
+    &copy; 2025 TheHomeworkGuy. Built for students who hate boring homework portals.
   </footer>
 
 </body>
