--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     <img src="https://www.svgrepo.com/show/354202/blob-color.svg" class="blob blob1" />
     <img src="https://www.svgrepo.com/show/354202/blob-color.svg" class="blob blob2" />
     <h1>Bringing the Classroom to Your Screen. 💥</h1>
-    <p>Homework & Classwork — Right Where You Need It.</p>
+    <p>Homework & Classwork — Right Where You Need It.Built for students who hate boring homework portals.</p>
     <a href="login.html"><button class="cta-button">Let’s Go 🚀</button></a>
   </section>
 
@@ -173,7 +173,7 @@
   </section>
 
   <footer>
-    &copy; 2025 TheHomeworkGuy. Built for students who hate boring homework portals.
+    &copy; 2025 TheHomeworkGuy. 
   </footer>
 
 </body>
