--- a/index.html
+++ b/index.html
@@ -172,7 +172,20 @@
       <p>Homework on your phone, tablet, or laptop — anytime, anywhere.</p>
     </div>
   </section>
-
+  
+<section class="about-us">
+  <div class="about-container">
+    <h2>👨‍🏫 About Us</h2>
+    <p>
+      At <strong>TheHomeworkGuy</strong>, I am Daksh Bhatt, on a mission to make classwork and homework access simple, fun, and digital.
+      Born from the frustration of missing classworks and forgotten assignments, I created this portal to bring order, ease, and a little style to your schoolwork.
+    </p>
+    <p>
+      Whether you're a student trying to stay on top of tasks or a teacher sharing daily updates, our platform keeps everyone in sync — beautifully.
+    </p>
+  </div>
+</section>
+ 
   <footer>
     &copy; 2025 TheHomeworkGuy. 
   </footer>
