--- a/index.html
+++ b/index.html
@@ -1,4 +1,13 @@
-body {
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>TheHomeworkGuy</title>
+  <link rel="icon" type="image/png" href="favicon.png" />
+  <link href="https://fonts.googleapis.com/css2?family=Baloo+2&family=Lexend:wght@400;600&display=swap" rel="stylesheet">
+  <style>
+    body {
   font-family: 'Lexend', sans-serif;
   background: radial-gradient(circle at 30% 10%, #ffe7aa, #f0f8ff);
   overflow-x: hidden;
@@ -41,3 +50,189 @@ header {
 footer {
   color: #555; /* Subtle but visible */
 }
+
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+    body {
+      font-family: 'Lexend', sans-serif;
+      background: radial-gradient(circle at 30% 10%, #ffe53b, #fd3838);
+      overflow-x: hidden;
+      color: #1a1a1a;
+    }
+
+    header {
+      background: linear-gradient(135deg, #ff0080, #7928ca);
+      padding: 1.5rem 2rem;
+      text-align: center;
+      color: white;
+      font-size: 2rem;
+      font-family: 'Baloo 2', cursive;
+      letter-spacing: 1px;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+    }
+
+    .hero {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      padding: 4rem 2rem;
+      position: relative;
+    }
+
+    .hero h1 {
+      font-size: 3rem;
+      color: #fff;
+      font-weight: 600;
+      margin-bottom: 1rem;
+      text-shadow: 1px 1px 4px rgba(0,0,0,0.2);
+    }
+
+    .hero p {
+      font-size: 1.2rem;
+      color: #f0f0f0;
+      max-width: 600px;
+      margin-bottom: 2rem;
+    }
+
+    .cta-button {
+      background: linear-gradient(45deg, #00f2fe, #4facfe);
+      color: white;
+      padding: 1rem 2rem;
+      font-size: 1.1rem;
+      border-radius: 50px;
+      border: none;
+      cursor: pointer;
+      transition: all 0.3s ease;
+      box-shadow: 0 10px 25px rgba(79, 172, 254, 0.4);
+    }
+
+    .cta-button:hover {
+      background: linear-gradient(45deg, #4facfe, #00f2fe);
+      transform: scale(1.08);
+    }
+
+    .blob {
+      position: absolute;
+      z-index: -1;
+      opacity: 0.25;
+    }
+
+    .blob1 {
+      top: -100px;
+      left: -100px;
+      width: 300px;
+    }
+
+    .blob2 {
+      bottom: -100px;
+      right: -100px;
+      width: 300px;
+    }
+
+    .features {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      padding: 4rem 2rem;
+      gap: 2rem;
+      background: linear-gradient(to bottom, #ffecd2, #fcb69f);
+    }
+
+    .card {
+      background: white;
+      border-radius: 20px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.1);
+      padding: 2rem;
+      width: 280px;
+      transition: transform 0.3s;
+    }
+
+    .card:hover {
+      transform: translateY(-10px);
+    }
+
+    .card h3 {
+      font-size: 1.4rem;
+      margin-bottom: 0.5rem;
+      color: #ff0080;
+    }
+
+    .card p {
+      font-size: 1rem;
+      color: #444;
+    }
+
+    footer {
+      text-align: center;
+      padding: 2rem;
+      font-size: 0.9rem;
+      background: linear-gradient(90deg, #ff9a9e, #fad0c4);
+      color: #333;
+    }
+
+    @media (max-width: 768px) {
+      .hero h1 {
+        font-size: 2.2rem;
+      }
+      .card {
+        width: 90%;
+      }
+    }
+  </style>
+</head>
+<body>
+
+  <header>
+    🎒 TheHomeworkGuy
+  </header>
+
+  <section class="hero">
+    <img src="https://www.svgrepo.com/show/354202/blob-color.svg" class="blob blob1" />
+    <img src="https://www.svgrepo.com/show/354202/blob-color.svg" class="blob blob2" />
+    <h1>Bringing the Classroom to Your Screen. 💥</h1>
+    <p>Homework & Classwork — Right Where You Need It.<br>Built for students who hate boring homework portals.</p>
+    <a href="login.html"><button class="cta-button">Let’s Go 🚀</button></a>
+  </section>
+
+  <section class="features">
+    <div class="card">
+      <h3>📚 Organized Homework</h3>
+      <p>All your classwork and assignments in one place. No mess, no stress.</p>
+    </div>
+    <div class="card">
+      <h3>⚡ Upload Fast</h3>
+      <p>Snap and upload homework in seconds. Done and dusted.</p>
+    </div>
+    <div class="card">
+      <h3>🎨 Funky UI</h3>
+      <p>Bright colors, playful shapes, and a Gen-Z-friendly vibe make learning fun again.</p>
+    </div>
+    <div class="card">
+      <h3>☁️ Access Anywhere</h3>
+      <p>Homework on your phone, tablet, or laptop — anytime, anywhere.</p>
+    </div>
+  </section>
+  
+<section class="about-us">
+  <div class="about-container">
+    <h2>👨‍🏫 About Us</h2>
+    <p>
+      At <strong>TheHomeworkGuy</strong>, I am Daksh Bhatt, on a mission to make classwork and homework access simple, fun, and digital.
+      Born from the frustration of missing classworks and forgotten assignments, I created this portal to bring order, ease, and a little style to your schoolwork.
+    </p>
+    <p>
+      Whether you're a student trying to stay on top of tasks or a teacher sharing daily updates, our platform keeps everyone in sync — beautifully.
+    </p>
+  </div>
+</section>
+ 
+  <footer>
+    &copy; 2025 TheHomeworkGuy. 
+  </footer>
+
+</body>
+</html>
