--- a/login.html
+++ b/login.html
@@ -30,7 +30,7 @@
 
   <!-- Google Sign-In Button -->
   <div id="g_id_onload"
-       data-client_id="YOUR_GOOGLE_CLIENT_ID"
+       data-client_id="225196636743-kc7pn09sphgsgcmvu20ismpjlejku8aj.apps.googleusercontent.com"
        data-login_uri="https://yourwebsite.com/home.html"
        data-auto_prompt="false">
   </div>
