--- a/login.html
+++ b/login.html
@@ -26,9 +26,8 @@
 </head>
 <body>
 
-  <h2>Sign in with Google to Continue ??</h2>
+  <h2>Sign in with Google to Continue.</h2>
 
-  <!-- Google Sign-In Button -->
   <div id="g_id_onload"
        data-client_id="225196636743-kc7pn09sphgsgcmvu20ismpjlejku8aj.apps.googleusercontent.com"
        data-login_uri="https://thehomeworkguy.in/home.html"
@@ -37,8 +36,8 @@
 
   <div class="g_id_signin" 
        data-type="standard"
-       data-shape="pill"
-       data-theme="filled_blue"
+       data-shape="rectangular"
+       data-theme="outline"
        data-text="sign_in_with"
        data-size="large"
        data-logo_alignment="left">
